packages/go/include/xberg.h

typedef uint64_t XBERGAlefHandle;
XBERGAlefHandle xberg_chunking_config_from_json(const char *json);
char *xberg_chunking_config_to_json(XBERGAlefHandle handle);
void xberg_chunking_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_content_filter_config_from_json(const char *json);
char *xberg_content_filter_config_to_json(XBERGAlefHandle handle);
void xberg_content_filter_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_diff_options_from_json(const char *json);
char *xberg_diff_options_to_json(XBERGAlefHandle handle);
void xberg_diff_options_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_document_structure_from_json(const char *json);
char *xberg_document_structure_to_json(XBERGAlefHandle handle);
void xberg_document_structure_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_embedding_config_from_json(const char *json);
char *xberg_embedding_config_to_json(XBERGAlefHandle handle);
void xberg_embedding_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_extract_input_from_json(const char *json);
char *xberg_extract_input_to_json(XBERGAlefHandle handle);
void xberg_extract_input_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_extracted_document_from_json(const char *json);
char *xberg_extracted_document_to_json(XBERGAlefHandle handle);
void xberg_extracted_document_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_extraction_config_from_json(const char *json);
char *xberg_extraction_config_to_json(XBERGAlefHandle handle);
void xberg_extraction_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_extraction_result_from_json(const char *json);
char *xberg_extraction_result_to_json(XBERGAlefHandle handle);
void xberg_extraction_result_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_footnote_config_from_json(const char *json);
char *xberg_footnote_config_to_json(XBERGAlefHandle handle);
void xberg_footnote_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_heuristics_config_from_json(const char *json);
char *xberg_heuristics_config_to_json(XBERGAlefHandle handle);
void xberg_heuristics_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_hierarchy_config_from_json(const char *json);
char *xberg_hierarchy_config_to_json(XBERGAlefHandle handle);
void xberg_hierarchy_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_html_output_config_from_json(const char *json);
char *xberg_html_output_config_to_json(XBERGAlefHandle handle);
void xberg_html_output_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_image_extraction_config_from_json(const char *json);
char *xberg_image_extraction_config_to_json(XBERGAlefHandle handle);
void xberg_image_extraction_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_image_preprocessing_config_from_json(const char *json);
char *xberg_image_preprocessing_config_to_json(XBERGAlefHandle handle);
void xberg_image_preprocessing_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_keyword_config_from_json(const char *json);
char *xberg_keyword_config_to_json(XBERGAlefHandle handle);
void xberg_keyword_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_language_detection_config_from_json(const char *json);
char *xberg_language_detection_config_to_json(XBERGAlefHandle handle);
void xberg_language_detection_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_layout_detection_config_from_json(const char *json);
char *xberg_layout_detection_config_to_json(XBERGAlefHandle handle);
void xberg_layout_detection_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_map_result_from_json(const char *json);
char *xberg_map_result_to_json(XBERGAlefHandle handle);
void xberg_map_result_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_multidoc_thresholds_from_json(const char *json);
char *xberg_multidoc_thresholds_to_json(XBERGAlefHandle handle);
void xberg_multidoc_thresholds_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_ocr_config_from_json(const char *json);
char *xberg_ocr_config_to_json(XBERGAlefHandle handle);
void xberg_ocr_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_ocr_quality_thresholds_from_json(const char *json);
char *xberg_ocr_quality_thresholds_to_json(XBERGAlefHandle handle);
void xberg_ocr_quality_thresholds_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_paddle_ocr_config_from_json(const char *json);
char *xberg_paddle_ocr_config_to_json(XBERGAlefHandle handle);
void xberg_paddle_ocr_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_page_config_from_json(const char *json);
char *xberg_page_config_to_json(XBERGAlefHandle handle);
void xberg_page_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_page_signals_from_json(const char *json);
char *xberg_page_signals_to_json(XBERGAlefHandle handle);
void xberg_page_signals_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_pdf_config_from_json(const char *json);
char *xberg_pdf_config_to_json(XBERGAlefHandle handle);
void xberg_pdf_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_post_processor_config_from_json(const char *json);
char *xberg_post_processor_config_to_json(XBERGAlefHandle handle);
void xberg_post_processor_config_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_preset_from_json(const char *json);
char *xberg_preset_to_json(XBERGAlefHandle handle);
void xberg_preset_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_preset_summary_from_json(const char *json);
char *xberg_preset_summary_to_json(XBERGAlefHandle handle);
void xberg_preset_summary_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_rake_params_from_json(const char *json);
char *xberg_rake_params_to_json(XBERGAlefHandle handle);
void xberg_rake_params_free(XBERGAlefHandle handle);
XBERGAlefHandle xberg_redaction_config_from_json(const char *json);
char *xberg_redaction_config_to_json(XBERGAlefHandle handle);