packages/crystal/src/xberg.cr


  struct ChunkingConfig
    _data : Void*
  end
  struct ContentFilterConfig
    _data : Void*
  end
  struct DiffOptions
    _data : Void*
  end
  struct DocumentStructure
    _data : Void*
  end
  struct EmbeddingConfig
    _data : Void*
  end
  struct ExtractInput
    _data : Void*
  end
  struct ExtractedDocument
    _data : Void*
  end
  struct ExtractionConfig
    _data : Void*
  end
  struct ExtractionResult
    _data : Void*
  end
  struct FootnoteConfig
    _data : Void*
  end
  struct HeuristicsConfig
    _data : Void*
  end
  struct HierarchyConfig
    _data : Void*
  end
  struct HtmlOutputConfig
    _data : Void*
  end
  struct ImageExtractionConfig
    _data : Void*
  end
  struct ImagePreprocessingConfig
    _data : Void*
  end
  struct KeywordConfig
    _data : Void*
  end
  struct LanguageDetectionConfig
    _data : Void*
  end
  struct LayoutDetectionConfig
    _data : Void*
  end
  struct MapResult
    _data : Void*
  end
  struct MultidocThresholds
    _data : Void*
  end
  struct OcrBackendType
    _data : Void*
  end
  struct OcrConfig
    _data : Void*
  end
  struct OcrQualityThresholds
    _data : Void*
  end
  struct PaddleOcrConfig
    _data : Void*
  end
  struct PageConfig
    _data : Void*
  end
  struct PageSignals
    _data : Void*
  end
  struct PdfConfig
    _data : Void*
  end
  struct PostProcessorConfig
    _data : Void*
  end
  struct Preset
    _data : Void*
  end
  struct PresetSummary
    _data : Void*
  end
  struct ProcessingStage
    _data : Void*
  end
  struct RakeParams
    _data : Void*
  end
  struct RedactionConfig
    _data : Void*
  end
  struct RedactionPattern
    _data : Void*
  end
  struct RedactionTerm
    _data : Void*
  end
  struct RerankerConfig
    _data : Void*
  end
  struct SecurityLimits
    _data : Void*
  end
  struct ServerConfig
    _data : Void*
  end
  struct SupportedFormat
    _data : Void*
  end
  struct SvgOptions
    _data : Void*
  end
  struct TesseractConfig
    _data : Void*
  end
  struct TokenReductionConfig
    _data : Void*
  end
  struct TokenReductionOptions
    _data : Void*
  end
  struct TranscriptionConfig
    _data : Void*
  end
  struct TreeSitterConfig
    _data : Void*
  end
  struct TreeSitterProcessConfig
    _data : Void*
  end
  struct UrlExtractionConfig
    _data : Void*
  end
  struct YakeParams
    _data : Void*
  end
  fun chunking_config_from_json = xberg_chunking_config_from_json(json : LibC::Char*) : ChunkingConfig*
  fun chunking_config_to_json = xberg_chunking_config_to_json(ptr : ChunkingConfig*) : LibC::Char*
  fun chunking_config_free = xberg_chunking_config_free(ptr : ChunkingConfig*)
  fun content_filter_config_from_json = xberg_content_filter_config_from_json(json : LibC::Char*) : ContentFilterConfig*
  fun content_filter_config_to_json = xberg_content_filter_config_to_json(ptr : ContentFilterConfig*) : LibC::Char*
  fun content_filter_config_free = xberg_content_filter_config_free(ptr : ContentFilterConfig*)
  fun diff_options_from_json = xberg_diff_options_from_json(json : LibC::Char*) : DiffOptions*
  fun diff_options_to_json = xberg_diff_options_to_json(ptr : DiffOptions*) : LibC::Char*
  fun diff_options_free = xberg_diff_options_free(ptr : DiffOptions*)
  fun document_structure_from_json = xberg_document_structure_from_json(json : LibC::Char*) : DocumentStructure*
  fun document_structure_to_json = xberg_document_structure_to_json(ptr : DocumentStructure*) : LibC::Char*
  fun document_structure_free = xberg_document_structure_free(ptr : DocumentStructure*)
  fun embedding_config_from_json = xberg_embedding_config_from_json(json : LibC::Char*) : EmbeddingConfig*
  fun embedding_config_to_json = xberg_embedding_config_to_json(ptr : EmbeddingConfig*) : LibC::Char*
  fun embedding_config_free = xberg_embedding_config_free(ptr : EmbeddingConfig*)
  fun extract_input_from_json = xberg_extract_input_from_json(json : LibC::Char*) : ExtractInput*
  fun extract_input_to_json = xberg_extract_input_to_json(ptr : ExtractInput*) : LibC::Char*
  fun extract_input_free = xberg_extract_input_free(ptr : ExtractInput*)
  fun extracted_document_from_json = xberg_extracted_document_from_json(json : LibC::Char*) : ExtractedDocument*
  fun extracted_document_to_json = xberg_extracted_document_to_json(ptr : ExtractedDocument*) : LibC::Char*
  fun extracted_document_free = xberg_extracted_document_free(ptr : ExtractedDocument*)
  fun extraction_config_from_json = xberg_extraction_config_from_json(json : LibC::Char*) : ExtractionConfig*
  fun extraction_config_to_json = xberg_extraction_config_to_json(ptr : ExtractionConfig*) : LibC::Char*
  fun extraction_config_free = xberg_extraction_config_free(ptr : ExtractionConfig*)
  fun extraction_result_from_json = xberg_extraction_result_from_json(json : LibC::Char*) : ExtractionResult*
  fun extraction_result_to_json = xberg_extraction_result_to_json(ptr : ExtractionResult*) : LibC::Char*
  fun extraction_result_free = xberg_extraction_result_free(ptr : ExtractionResult*)
  fun footnote_config_from_json = xberg_footnote_config_from_json(json : LibC::Char*) : FootnoteConfig*
  fun footnote_config_to_json = xberg_footnote_config_to_json(ptr : FootnoteConfig*) : LibC::Char*
  fun footnote_config_free = xberg_footnote_config_free(ptr : FootnoteConfig*)
  fun heuristics_config_from_json = xberg_heuristics_config_from_json(json : LibC::Char*) : HeuristicsConfig*
  fun heuristics_config_to_json = xberg_heuristics_config_to_json(ptr : HeuristicsConfig*) : LibC::Char*
  fun heuristics_config_free = xberg_heuristics_config_free(ptr : HeuristicsConfig*)
  fun hierarchy_config_from_json = xberg_hierarchy_config_from_json(json : LibC::Char*) : HierarchyConfig*
  fun hierarchy_config_to_json = xberg_hierarchy_config_to_json(ptr : HierarchyConfig*) : LibC::Char*
  fun hierarchy_config_free = xberg_hierarchy_config_free(ptr : HierarchyConfig*)
  fun html_output_config_from_json = xberg_html_output_config_from_json(json : LibC::Char*) : HtmlOutputConfig*
  fun html_output_config_to_json = xberg_html_output_config_to_json(ptr : HtmlOutputConfig*) : LibC::Char*
  fun html_output_config_free = xberg_html_output_config_free(ptr : HtmlOutputConfig*)
  fun image_extraction_config_from_json = xberg_image_extraction_config_from_json(json : LibC::Char*) : ImageExtractionConfig*
  fun image_extraction_config_to_json = xberg_image_extraction_config_to_json(ptr : ImageExtractionConfig*) : LibC::Char*
  fun image_extraction_config_free = xberg_image_extraction_config_free(ptr : ImageExtractionConfig*)
  fun image_preprocessing_config_from_json = xberg_image_preprocessing_config_from_json(json : LibC::Char*) : ImagePreprocessingConfig*
  fun image_preprocessing_config_to_json = xberg_image_preprocessing_config_to_json(ptr : ImagePreprocessingConfig*) : LibC::Char*
  fun image_preprocessing_config_free = xberg_image_preprocessing_config_free(ptr : ImagePreprocessingConfig*)
  fun keyword_config_from_json = xberg_keyword_config_from_json(json : LibC::Char*) : KeywordConfig*
  fun keyword_config_to_json = xberg_keyword_config_to_json(ptr : KeywordConfig*) : LibC::Char*
  fun keyword_config_free = xberg_keyword_config_free(ptr : KeywordConfig*)
  fun language_detection_config_from_json = xberg_language_detection_config_from_json(json : LibC::Char*) : LanguageDetectionConfig*
  fun language_detection_config_to_json = xberg_language_detection_config_to_json(ptr : LanguageDetectionConfig*) : LibC::Char*
  fun language_detection_config_free = xberg_language_detection_config_free(ptr : LanguageDetectionConfig*)
  fun layout_detection_config_from_json = xberg_layout_detection_config_from_json(json : LibC::Char*) : LayoutDetectionConfig*
  fun layout_detection_config_to_json = xberg_layout_detection_config_to_json(ptr : LayoutDetectionConfig*) : LibC::Char*
  fun layout_detection_config_free = xberg_layout_detection_config_free(ptr : LayoutDetectionConfig*)
  fun map_result_from_json = xberg_map_result_from_json(json : LibC::Char*) : MapResult*
  fun map_result_to_json = xberg_map_result_to_json(ptr : MapResult*) : LibC::Char*
  fun map_result_free = xberg_map_result_free(ptr : MapResult*)
  fun multidoc_thresholds_from_json = xberg_multidoc_thresholds_from_json(json : LibC::Char*) : MultidocThresholds*
  fun multidoc_thresholds_to_json = xberg_multidoc_thresholds_to_json(ptr : MultidocThresholds*) : LibC::Char*
  fun multidoc_thresholds_free = xberg_multidoc_thresholds_free(ptr : MultidocThresholds*)
  fun ocr_backend_type_from_json = xberg_ocr_backend_type_from_json(json : LibC::Char*) : OcrBackendType*
  fun ocr_backend_type_to_json = xberg_ocr_backend_type_to_json(ptr : OcrBackendType*) : LibC::Char*
  fun ocr_backend_type_free = xberg_ocr_backend_type_free(ptr : OcrBackendType*)
  fun ocr_config_from_json = xberg_ocr_config_from_json(json : LibC::Char*) : OcrConfig*
  fun ocr_config_to_json = xberg_ocr_config_to_json(ptr : OcrConfig*) : LibC::Char*
  fun ocr_config_free = xberg_ocr_config_free(ptr : OcrConfig*)
  fun ocr_quality_thresholds_from_json = xberg_ocr_quality_thresholds_from_json(json : LibC::Char*) : OcrQualityThresholds*
  fun ocr_quality_thresholds_to_json = xberg_ocr_quality_thresholds_to_json(ptr : OcrQualityThresholds*) : LibC::Char*
  fun ocr_quality_thresholds_free = xberg_ocr_quality_thresholds_free(ptr : OcrQualityThresholds*)
  fun paddle_ocr_config_from_json = xberg_paddle_ocr_config_from_json(json : LibC::Char*) : PaddleOcrConfig*
  fun paddle_ocr_config_to_json = xberg_paddle_ocr_config_to_json(ptr : PaddleOcrConfig*) : LibC::Char*
  fun paddle_ocr_config_free = xberg_paddle_ocr_config_free(ptr : PaddleOcrConfig*)
  fun page_config_from_json = xberg_page_config_from_json(json : LibC::Char*) : PageConfig*
  fun page_config_to_json = xberg_page_config_to_json(ptr : PageConfig*) : LibC::Char*
  fun page_config_free = xberg_page_config_free(ptr : PageConfig*)
  fun page_signals_from_json = xberg_page_signals_from_json(json : LibC::Char*) : PageSignals*
  fun page_signals_to_json = xberg_page_signals_to_json(ptr : PageSignals*) : LibC::Char*
  fun page_signals_free = xberg_page_signals_free(ptr : PageSignals*)
  fun pdf_config_from_json = xberg_pdf_config_from_json(json : LibC::Char*) : PdfConfig*
  fun pdf_config_to_json = xberg_pdf_config_to_json(ptr : PdfConfig*) : LibC::Char*
  fun pdf_config_free = xberg_pdf_config_free(ptr : PdfConfig*)
  fun post_processor_config_from_json = xberg_post_processor_config_from_json(json : LibC::Char*) : PostProcessorConfig*
  fun post_processor_config_to_json = xberg_post_processor_config_to_json(ptr : PostProcessorConfig*) : LibC::Char*
  fun post_processor_config_free = xberg_post_processor_config_free(ptr : PostProcessorConfig*)
  fun preset_from_json = xberg_preset_from_json(json : LibC::Char*) : Preset*
  fun preset_to_json = xberg_preset_to_json(ptr : Preset*) : LibC::Char*
  fun preset_free = xberg_preset_free(ptr : Preset*)
  fun preset_summary_from_json = xberg_preset_summary_from_json(json : LibC::Char*) : PresetSummary*
  fun preset_summary_to_json = xberg_preset_summary_to_json(ptr : PresetSummary*) : LibC::Char*
  fun preset_summary_free = xberg_preset_summary_free(ptr : PresetSummary*)
  fun processing_stage_from_json = xberg_processing_stage_from_json(json : LibC::Char*) : ProcessingStage*
  fun processing_stage_to_json = xberg_processing_stage_to_json(ptr : ProcessingStage*) : LibC::Char*
  fun processing_stage_free = xberg_processing_stage_free(ptr : ProcessingStage*)
  fun rake_params_from_json = xberg_rake_params_from_json(json : LibC::Char*) : RakeParams*
  fun rake_params_to_json = xberg_rake_params_to_json(ptr : RakeParams*) : LibC::Char*
  fun rake_params_free = xberg_rake_params_free(ptr : RakeParams*)
  fun redaction_config_from_json = xberg_redaction_config_from_json(json : LibC::Char*) : RedactionConfig*
  fun redaction_config_to_json = xberg_redaction_config_to_json(ptr : RedactionConfig*) : LibC::Char*
